# squat-counter

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  dataset.csv  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/code-review/: SKILL.md
docs/adr/: 0001-counting-algorithm.md  0002-camera-viewpoint.md  0003-squat-depth-definition.md  0004-mediapipe-runtime.md  0005-v1-scope.md  0006-capture-seam-accepts-recordings.md  0007-feature-extraction-interface.md  0008-browser-webcam-capture.md  0009-batch-output-schema.md
docs/design/: architecture.md
docs/experiment/: label_template.csv  protokol.md
docs/presentation/: index.html  slides_content.md
docs/presentation/css/: fishbone.css  styles.css
docs/presentation/js/: main.js  slide-loader.js  slides-bundle.js
docs/presentation/slides/: slide-01-cover.html  slide-02-background.html  slide-03-problem.html  slide-04-current-state.html  slide-05-targets.html  slide-06-fishbone.html  slide-07-root-cause.html  slide-08-solutions.html  slide-09-architecture.html  slide-10-dual-mode.html  slide-11-overall-accuracy.html  slide-12-camera-angles.html  slide-13-partial-gating.html  slide-14-distance.html  slide-15-lighting.html  (+3 more)
docs/research/: squat-rep-counting.md
scripts/: batch.py  build_slides_bundle.py  extract_frames.py  fetch_web_assets.py  install.py  run.py  serve.py
src/repcounter/: __init__.py  batch.py  types.py
tests/: conftest.py  test_batch.py  test_capture.py  test_count.py  test_detect.py  test_features.py  test_present.py  test_server.py  test_session.py  test_webcam.py
(+21 files in other folders)
