[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repcounter"
version = "0.1.0"
description = "Real-time squat repetition counter (MediaPipe Tasks Vision PoseLandmarker)"
requires-python = ">=3.10"
dependencies = ["opencv-python", "mediapipe", "fastapi", "uvicorn[standard]", "python-multipart"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
